--- a/dashboard.html
+++ b/dashboard.html
@@ -226,6 +226,7 @@
     </div>
     <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   </footer>
+  <script src="backend-simulator.js"></script>
   <script src="dashboard.js"></script>
 </body>
 </html>
