--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
     </div>
     <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   </footer>
+  <script src="backend-simulator.js"></script>
   <script src="demo.js"></script>
 </body>
 </html>
