--- a/login.html
+++ b/login.html
@@ -140,6 +140,7 @@
         </div>
         <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
     </footer>
+    <script src="backend-simulator.js"></script>
     <script src="auth.js"></script>
 </body>
 </html>
