--- a/practice.html
+++ b/practice.html
@@ -242,6 +242,7 @@ Explanation: Because nums[0] + nums[1] == 9, we return [0, 1].</pre>
     </div>
     <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   </footer>
+  <script src="backend-simulator.js"></script>
   <script src="practice.js"></script>
 </body>
 </html>
