--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
             <div class="container">
                 <div class="hero-content">
                     <h1>Join AI Interviewer</h1>
-                    <p class="subtitle">Start your journey to interview success today.</p>
+                    <p class="subtitle">Create your account and start your interview preparation journey.</p>
                 </div>
             </div>
         </section>
@@ -40,7 +40,7 @@
                 <div class="auth-form-container">
                     <div class="auth-header">
                         <h2>Create Account</h2>
-                        <p>Sign up to get started with personalized interview practice</p>
+                        <p>Fill in your details to get started</p>
                     </div>
                     
                     <form class="auth-form" id="signupForm">
@@ -49,7 +49,7 @@
                                 <label for="firstName">First Name</label>
                                 <div class="input-group">
                                     <i class="fa-solid fa-user input-icon"></i>
-                                    <input type="text" id="firstName" name="firstName" placeholder="First name" required>
+                                    <input type="text" id="firstName" name="firstName" placeholder="Enter your first name" required>
                                 </div>
                                 <div class="error-message" id="firstNameError"></div>
                             </div>
@@ -58,7 +58,7 @@
                                 <label for="lastName">Last Name</label>
                                 <div class="input-group">
                                     <i class="fa-solid fa-user input-icon"></i>
-                                    <input type="text" id="lastName" name="lastName" placeholder="Last name" required>
+                                    <input type="text" id="lastName" name="lastName" placeholder="Enter your last name" required>
                                 </div>
                                 <div class="error-message" id="lastNameError"></div>
                             </div>
@@ -91,11 +91,11 @@
                                     <i class="fa-solid fa-eye"></i>
                                 </button>
                             </div>
-                            <div class="password-strength" id="passwordStrength">
+                            <div class="password-strength" id="passwordStrength" style="display: none;">
                                 <div class="strength-bar">
                                     <div class="strength-fill" id="strengthFill"></div>
                                 </div>
-                                <span class="strength-text" id="strengthText">Password strength</span>
+                                <div class="strength-text" id="strengthText"></div>
                             </div>
                             <div class="error-message" id="passwordError"></div>
                         </div>
@@ -117,14 +117,6 @@
                                 <input type="checkbox" id="agreeTerms" required>
                                 <span class="checkmark"></span>
                                 I agree to the <a href="#" class="terms-link">Terms of Service</a> and <a href="#" class="terms-link">Privacy Policy</a>
-                            </label>
-                        </div>
-
-                        <div class="form-options">
-                            <label class="checkbox-container">
-                                <input type="checkbox" id="emailUpdates">
-                                <span class="checkmark"></span>
-                                Send me updates and tips via email
                             </label>
                         </div>
 
@@ -154,34 +146,34 @@
                 </div>
 
                 <div class="auth-features">
-                    <h3>What you'll get:</h3>
+                    <h3>Why join AI Interviewer?</h3>
                     <div class="feature-list">
+                        <div class="feature-item">
+                            <i class="fa-solid fa-chart-line"></i>
+                            <div>
+                                <h4>Track Progress</h4>
+                                <p>Monitor your improvement with detailed analytics</p>
+                            </div>
+                        </div>
+                        <div class="feature-item">
+                            <i class="fa-solid fa-trophy"></i>
+                            <div>
+                                <h4>Earn Achievements</h4>
+                                <p>Unlock badges and milestones as you progress</p>
+                            </div>
+                        </div>
+                        <div class="feature-item">
+                            <i class="fa-solid fa-users"></i>
+                            <div>
+                                <h4>Join Community</h4>
+                                <p>Connect with other learners and share experiences</p>
+                            </div>
+                        </div>
                         <div class="feature-item">
                             <i class="fa-solid fa-brain"></i>
                             <div>
-                                <h4>AI-Powered Practice</h4>
-                                <p>Get personalized questions based on your skill level</p>
-                            </div>
-                        </div>
-                        <div class="feature-item">
-                            <i class="fa-solid fa-clock"></i>
-                            <div>
-                                <h4>Flexible Scheduling</h4>
-                                <p>Practice anytime, anywhere with our browser-based platform</p>
-                            </div>
-                        </div>
-                        <div class="feature-item">
-                            <i class="fa-solid fa-lightbulb"></i>
-                            <div>
-                                <h4>Smart Hints</h4>
-                                <p>Get helpful hints and detailed explanations for every problem</p>
-                            </div>
-                        </div>
-                        <div class="feature-item">
-                            <i class="fa-solid fa-chart-bar"></i>
-                            <div>
-                                <h4>Progress Analytics</h4>
-                                <p>Track your improvement with detailed performance metrics</p>
+                                <h4>Adaptive Learning</h4>
+                                <p>AI-powered questions that adapt to your skill level</p>
                             </div>
                         </div>
                     </div>
@@ -201,6 +193,7 @@
         </div>
         <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
     </footer>
+    <script src="backend-simulator.js"></script>
     <script src="auth.js"></script>
 </body>
 </html>
