--- a/dashboard.html
+++ b/dashboard.html
@@ -47,7 +47,7 @@
                 <i class="fa-solid fa-fire"></i>
               </div>
               <div class="stat-content">
-                <h3 id="streakCount">7</h3>
+                <h3 id="streakCount">0</h3>
                 <p>Day Streak</p>
               </div>
             </div>
@@ -56,7 +56,7 @@
                 <i class="fa-solid fa-check-circle"></i>
               </div>
               <div class="stat-content">
-                <h3 id="totalSolved">42</h3>
+                <h3 id="totalSolved">0</h3>
                 <p>Problems Solved</p>
               </div>
             </div>
@@ -65,7 +65,7 @@
                 <i class="fa-solid fa-clock"></i>
               </div>
               <div class="stat-content">
-                <h3 id="totalTime">12h 34m</h3>
+                <h3 id="totalTime">0h 0m</h3>
                 <p>Time Practiced</p>
               </div>
             </div>
@@ -74,7 +74,7 @@
                 <i class="fa-solid fa-trophy"></i>
               </div>
               <div class="stat-content">
-                <h3 id="accuracy">78%</h3>
+                <h3 id="accuracy">0%</h3>
                 <p>Accuracy</p>
               </div>
             </div>
@@ -92,72 +92,9 @@
         <!-- Topic Performance -->
         <div class="topics-section">
           <h2 class="section-title">Topic Performance</h2>
-          <div class="topics-grid">
-            <div class="topic-card" data-topic="arrays">
-              <div class="topic-header">
-                <h3><i class="fa-solid fa-list"></i> Arrays</h3>
-                <span class="topic-score">85%</span>
-              </div>
-              <div class="progress-bar">
-                <div class="progress-fill" style="width: 85%"></div>
-              </div>
-              <div class="topic-stats">
-                <span>12 solved</span>
-                <span>2 failed</span>
-              </div>
-            </div>
-            <div class="topic-card" data-topic="strings">
-              <div class="topic-header">
-                <h3><i class="fa-solid fa-font"></i> Strings</h3>
-                <span class="topic-score">72%</span>
-              </div>
-              <div class="progress-bar">
-                <div class="progress-fill" style="width: 72%"></div>
-              </div>
-              <div class="topic-stats">
-                <span>8 solved</span>
-                <span>3 failed</span>
-              </div>
-            </div>
-            <div class="topic-card" data-topic="graphs">
-              <div class="topic-header">
-                <h3><i class="fa-solid fa-project-diagram"></i> Graphs</h3>
-                <span class="topic-score">65%</span>
-              </div>
-              <div class="progress-bar">
-                <div class="progress-fill" style="width: 65%"></div>
-              </div>
-              <div class="topic-stats">
-                <span>6 solved</span>
-                <span>3 failed</span>
-              </div>
-            </div>
-            <div class="topic-card" data-topic="dynamic-programming">
-              <div class="topic-header">
-                <h3><i class="fa-solid fa-brain"></i> Dynamic Programming</h3>
-                <span class="topic-score">58%</span>
-              </div>
-              <div class="progress-bar">
-                <div class="progress-fill" style="width: 58%"></div>
-              </div>
-              <div class="topic-stats">
-                <span>5 solved</span>
-                <span>4 failed</span>
-              </div>
-            </div>
-            <div class="topic-card" data-topic="trees">
-              <div class="topic-header">
-                <h3><i class="fa-solid fa-sitemap"></i> Trees</h3>
-                <span class="topic-score">80%</span>
-              </div>
-              <div class="progress-bar">
-                <div class="progress-fill" style="width: 80%"></div>
-              </div>
-              <div class="topic-stats">
-                <span>11 solved</span>
-                <span>3 failed</span>
-              </div>
-            </div>
+          <div class="topics-grid" id="topicsGrid">
+            <!-- Topic cards will be populated by JavaScript -->
+            <div style="text-align: center; color: #666; padding: 2rem;">Loading topic performance...</div>
           </div>
         </div>
 
@@ -176,37 +113,37 @@
             <div class="goal-item">
               <div class="goal-content">
                 <h4>Solve 50 Problems</h4>
-                <p>You're 84% of the way there!</p>
+                <p>Start practicing to track your progress!</p>
               </div>
               <div class="goal-progress">
                 <div class="progress-bar">
-                  <div class="progress-fill" style="width: 84%"></div>
+                  <div class="progress-fill" style="width: 0%"></div>
                 </div>
-                <span>42/50</span>
+                <span>0/50</span>
               </div>
             </div>
             <div class="goal-item">
               <div class="goal-content">
                 <h4>Maintain 7-Day Streak</h4>
-                <p>Keep it up! You're on day 7.</p>
+                <p>Start a practice session to begin your streak!</p>
               </div>
               <div class="goal-progress">
                 <div class="progress-bar">
-                  <div class="progress-fill" style="width: 100%"></div>
+                  <div class="progress-fill" style="width: 0%"></div>
                 </div>
-                <span>7/7</span>
+                <span>0/7</span>
               </div>
             </div>
             <div class="goal-item">
               <div class="goal-content">
                 <h4>Master Dynamic Programming</h4>
-                <p>Focus on this topic to improve your score.</p>
+                <p>Complete some practice sessions to track accuracy!</p>
               </div>
               <div class="goal-progress">
                 <div class="progress-bar">
-                  <div class="progress-fill" style="width: 58%"></div>
+                  <div class="progress-fill" style="width: 0%"></div>
                 </div>
-                <span>58%</span>
+                <span>0%</span>
               </div>
             </div>
           </div>
@@ -226,7 +163,14 @@
     </div>
     <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="supabase-config.js"></script>
+  <script src="supabaseClient.js"></script>
+  <script src="supabase-db.js"></script>
+  <script src="backend-api.js"></script>
+  <script src="auth-check.js"></script>
   <script src="backend-simulator.js"></script>
+  <script src="modern-ui.js"></script>
   <script src="dashboard.js"></script>
 </body>
 </html>
