Update all HTML pages with modern UI integration and consistent styling

--- a/about.html
+++ b/about.html
@@ -64,6 +64,12 @@
     </div>
     <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="supabase-config.js"></script>
+  <script src="supabaseClient.js"></script>
+  <script src="supabase-db.js"></script>
+  <script src="auth-check.js"></script>
+  <script src="modern-ui.js"></script>
 </body>
 </html>
 
