--- a/index.html
+++ b/index.html
@@ -123,7 +123,13 @@
     </div>
     <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="supabase-config.js"></script>
+  <script src="supabaseClient.js"></script>
+  <script src="supabase-db.js"></script>
+  <script src="auth-check.js"></script>
   <script src="backend-simulator.js"></script>
+  <script src="modern-ui.js"></script>
   <script src="demo.js"></script>
 </body>
 </html>
